# MeshSimplification

./: .gitignore  CMakeLists.txt
include/decimator/: .extract.h.swp  .visual.h.swp  extract.h  simplify.h  visual.h
src/: .main.cpp.swp  extract.cpp  main.cpp  rply.c  simplify.cpp  simplify.h  visual.cpp
